FIX (long-form-intro) Remove z-index
Remove unnecessary z-index

--- a/src/patterns/long-form-intro/long-form-intro.scss
+++ b/src/patterns/long-form-intro/long-form-intro.scss
@@ -20,7 +20,6 @@ section.long-form.long-form-intro {
         position: absolute;
         top: 0;
         width: 100%;
-        z-index: 1001;
     }
 }
 
